install post tags

--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Man Over Board - About
 ---
-  <h1>About</h1>
+  <h1>A Man, A Board, Abroad, A Blog</h1>
     <p>Is skateboarding a universal language?</p>
 
     <p>I think so, but I intend to find out for sure. I’m a recent graduate of the University of Washington’s Museology Graduate Program traveling the world for 8 months on a Bonderman Fellowship. Along the way, I plan to ride my skateboard and hope to meet other people who like to do the same. My hope is that a shared love of skateboarding will help me overcome language barriers and cultural differences, allowing me to meet people whose stories may be quite different than my own.</p>
